# Try_Out_Claude

./: .env.example  .gitignore  Agents.md  README.md  pyproject.toml  setup.py
configs/: domain_shift.yaml  example_experiment.yaml
notebooks/: 00_setup_template.ipynb  Evaluate_Datasets.ipynb
scripts/: run_domain_shift.py
src/: __init__.py  data_processing.py  evaluation.py  feature_engineering.py  models.py
src/utils/: config.py  logging.py
